correcao_testes_jwt